--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,26 @@
 {
     "name": "deeptouchit/license-checker",
-    "description": "A simple license checker for Laravel applications.",
     "type": "library",
+    "description": "A simple license checker for Laravel applications.",
+    "keywords": ["license", "laravel", "checker"],
+    "homepage": "https://github.com/salzarrahman/license-checker",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Salzar Rahman Sabu",
+            "email": "salzarrahman84@gmail.com",
+            "homepage": "http://salzarrahman.com",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": "^7.4|^8.0",
+        "guzzlehttp/guzzle": "^7.0"
+    },
     "autoload": {
         "psr-4": {
             "Deeptouchit\\LicenseChecker\\": "src/"
         }
-    },
-    "require": {
-        "php": "^7.4|^8.0",
-        "guzzlehttp/guzzle": "^7.0"
     },
     "extra": {
         "laravel": {
@@ -18,13 +29,6 @@
             ]
         }
     },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Salzar Rahman Sabu",
-            "email": "salzarrahman84@gmail.com"
-        }
-    ],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
